--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/e6ac989c9a.js"
       crossorigin="anonymous"
@@ -21,19 +25,41 @@
           <li>Sign in</li>
           <li>
             <button class="google-signup">
-              <img src="img/google-logo.png" alt="" /> Sign up
+              <i class="fab fa-google"></i> Sign up
             </button>
           </li>
         </ul>
       </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="section1">
+        <div class="container container-sx">
+          <h1>Understand, recognize and develop your people</h1>
+          <h3>
+            Teambit helps teams create a high performing culture with regular
+            feedback.
+          </h3>
+          <div class="bottoni">
+            <button>
+              <img src="img/google-logo.png" alt="" />
+              <span>Sign up with Google</span>
+            </button>
+            <span class="or">or</span>
+            <button>
+              <img src="img/slack-logo.png" alt="" />
+              <span>Sign up with Slack</span>
+            </button>
+          </div>
+        </div>
+        <div class="container container-dx">
+          <img src="img/illustration-main.jpg" alt="" />
+        </div>
+      </section>
+      <section class="section2"></section>
+      <section class="section3"></section>
+      <section class="section4"></section>
+      <section class="section5"></section>
+      <section class="section6"></section>
     </main>
     <footer></footer>
   </body>
