rimosso slash da link css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/e6ac989c9a.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/dist/css/app.css" />
+    <link rel="stylesheet" href="dist/css/app.css" />
     <title>Teambit</title>
   </head>
   <body>
