aggiunto ultimo elemento della prima sezione

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               <span>Sign up with Slack</span>
             </button>
           </div>
+          <h5>or use your email adress <i class="fas fa-arrow-right"></i></h5>
         </div>
         <div class="container container-dx">
           <img src="img/illustration-main.jpg" alt="" />
