iniziata seconda sezione

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
           <img src="img/illustration-main.jpg" alt="" />
         </div>
       </section>
-      <section class="section2"></section>
+      <section class="section2">
+        <h2>
+          Traditional people processes lead to disengagement and turnover.
+        </h2>
+        <div class="row row1"></div>
+        <div class="row row2"></div>
+      </section>
       <section class="section3"></section>
       <section class="section4"></section>
       <section class="section5"></section>
