--- a/index.html
+++ b/index.html
@@ -60,8 +60,25 @@
         <h2>
           Traditional people processes lead to disengagement and turnover.
         </h2>
-        <div class="row row1"></div>
-        <div class="row row2"></div>
+        <div class="row row1">
+          <div class="card card1">
+            <img src="img/card1.png" alt="" />
+            <p>They are hardcore, formal and disconnected</p>
+          </div>
+          <div class="card card2">
+            <img src="img/card2.png" alt="" />
+            <p>They don't encourage regular feedback</p>
+          </div>
+          <div class="card card3">
+            <img src="img/card3.png" alt="" />
+            <p>They don't make it safe to speak up</p>
+          </div>
+        </div>
+        <div class="row row2">
+          <img src="img/card4.png" alt="" />
+        </div>
+
+        <hr />
       </section>
       <section class="section3"></section>
       <section class="section4"></section>
