conclusa seconda sezione

--- a/index.html
+++ b/index.html
@@ -79,6 +79,29 @@
         </div>
 
         <hr />
+
+        <h2>
+          It doesn't have to be like that. Teambit is a modern solution that
+          teammates love.
+        </h2>
+        <div class="row row1">
+          <div class="card card1">
+            <img src="img/card1.2.png" alt="" />
+            <p>They are hardcore, formal and disconnected</p>
+          </div>
+          <div class="card card2">
+            <img src="img/card 2.2.png" alt="" />
+            <p>They don't encourage regular feedback</p>
+          </div>
+          <div class="card card3 card-speciale">
+            <img src="img/card3.2.png" alt="" />
+            <p>They don't make it safe to speak up</p>
+          </div>
+        </div>
+        <div class="row row2">
+          <img src="img/card4.2.png" alt="" />
+        </div>
+        <h2>Here is how it works.</h2>
       </section>
       <section class="section3"></section>
       <section class="section4"></section>
