--- a/index.html
+++ b/index.html
@@ -103,7 +103,74 @@
         </div>
         <h2>Here is how it works.</h2>
       </section>
-      <section class="section3"></section>
+      <section class="section3">
+        <!-- da ripetere per tutta la sezione -->
+        <div class="sottosezione sottosezione1">
+          <div class="contenitore contenitore-sx">
+            <img src="img/employee-feedback.jpg" alt="" />
+          </div>
+          <div class="contenitore contenitore-dx">
+            <h2>Feedback to help teammates improve</h2>
+            <h3>
+              Empower your teammates to know in real time what they are doing
+              well and what they need to improve.
+            </h3>
+            <h3>
+              <a href="">Learn more <i class="fas fa-arrow-right"></i></a>
+            </h3>
+            <img src="img/communication.jpg" alt="" />
+          </div>
+        </div>
+        <div class="sottosezione sottosezione2">
+          <div class="contenitore contenitore-sx">
+            <h2>Reviews to help teammates get a fair evaluation</h2>
+            <h3>
+              Make better compensation and promotion decisions with objective
+              and quick performance reviews.
+            </h3>
+            <h3>
+              <a href="">Learn more <i class="fas fa-arrow-right"></i></a>
+            </h3>
+            <img src="/img/insights.jpg" alt="" />
+          </div>
+          <div class="contenitore contenitore-dx">
+            <img src="/img/employee-survey.jpg" alt="" />
+          </div>
+        </div>
+        <div class="sottosezione sottosezione3">
+          <div class="contenitore contenitore-sx">
+            <img src="/img/performance-review.jpg" alt="" />
+          </div>
+          <div class="contenitore contenitore-dx">
+            <h2>Reviews to help teammates get a fair evaluation</h2>
+            <h3>
+              Make better compensation and promotion decisions with objective
+              and quick performance reviews.
+            </h3>
+            <h3>
+              <a href="">Learn more <i class="fas fa-arrow-right"></i></a>
+            </h3>
+            <img src="img/review.jpg" alt="" />
+          </div>
+        </div>
+
+        <div class="sottosezione sottosezione4">
+          <div class="contenitore contenitore-sx">
+            <h2>Praise to help teammates feel valued</h2>
+            <h3>
+              Make it a habit to recognize and praise people who do great work.
+            </h3>
+            <h3>
+              <a href="">Learn more <i class="fas fa-arrow-right"></i></a>
+            </h3>
+            <img src="img/recognition.jpg" alt="" />
+          </div>
+          <div class="contenitore contenitore-dx">
+            <img src="img/employee-recognition.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+
       <section class="section4"></section>
       <section class="section5"></section>
       <section class="section6"></section>
