--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
         <h2>Here is how it works.</h2>
       </section>
       <section class="section3">
-        <!-- da ripetere per tutta la sezione -->
         <div class="sottosezione sottosezione1">
           <div class="contenitore contenitore-sx">
             <img src="img/employee-feedback.jpg" alt="" />
@@ -171,7 +170,62 @@
         </div>
       </section>
 
-      <section class="section4"></section>
+      <section class="section4">
+        <div class="row-titolo">
+          <h2>
+            See Teambit for yourself. Get started in seconds
+            <img src="img/happy.svg" alt="" />
+          </h2>
+        </div>
+
+        <div class="jumbotron-e-quote">
+          <img class="quote" src="img/quote.svg" alt="" />
+          <div class="jumbotron">
+            <p>
+              We are experiencing what Gallup calls 'an employee engagement
+              crisis'. Just one-third of people at work are engaged.
+            </p>
+            <p>
+              To improve performance and engagement companies rely on the same
+              principles as industrial-age factories. But all those annual
+              performance reviews and hundred-question surveys don't work
+              anymore. People want regular feedback. Leaders who don't embrace
+              this change end up with misaligned, disengaged and dwindling team.
+            </p>
+            <p>
+              We designed Teambit to change that. It empowers teams to make
+              feedback a daily habit. Everybody knows what they are doing well
+              and what they need to improve, leading to better performing,
+              engaged and happier teams.
+            </p>
+            <p>
+              We are on a mission to make worklife exciting. Come join us.
+            </p>
+            <div class="avatar-e-firme">
+              <div class="avatar">
+                <img src="img/alex.png" alt="" />
+                <img src="img/bohdan.png" alt="" />
+              </div>
+              <div class="firme">
+                <p>Alex and Bohdan</p>
+                <small>Co-Founders at Teambit</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bottoni">
+          <button>
+            <img src="img/google-logo.png" alt="" />
+            <span>Sign up with Google</span>
+          </button>
+          <span class="or">or</span>
+          <button>
+            <img src="img/slack-logo.png" alt="" />
+            <span>Sign up with Slack</span>
+          </button>
+        </div>
+        <h5>or use your email adress <i class="fas fa-arrow-right"></i></h5>
+      </section>
       <section class="section5"></section>
       <section class="section6"></section>
     </main>
