--- a/index.html
+++ b/index.html
@@ -229,6 +229,80 @@
       <section class="section5"></section>
       <section class="section6"></section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="contenitore">
+        <div class="box box1">
+          <div class="boxino boxino1">
+            <img src="img/logo-small.svg" alt="" />
+          </div>
+          <div class="boxino boxino2">
+            <h3>
+              <a href="">Teambit</a> helps teams create high performing cultures
+              by making feedback a daily habit.
+            </h3>
+          </div>
+        </div>
+        <div class="box-a-destra">
+          <div class="box box2">
+            <ul>
+              <li>Product</li>
+              <li>Feedback</li>
+              <li>Surveys</li>
+              <li>Reviews</li>
+              <li>Praise</li>
+              <li>Slack Integration</li>
+              <li>Schedule a demo</li>
+              <li>Pricing</li>
+            </ul>
+          </div>
+          <div class="box box3">
+            <ul>
+              <li>About</li>
+              <li>About</li>
+              <li>Terms and privacy</li>
+              <li>Help Center</li>
+              <li>Blog</li>
+              <li>Digest</li>
+            </ul>
+          </div>
+          <div class="box box4">
+            <ul>
+              <li>Connect</li>
+              <li>Contact us</li>
+              <li>Twitter</li>
+              <li>Facebook</li>
+              <li>Linkedin</li>
+            </ul>
+          </div>
+          <div class="box box5">
+            <ul>
+              <li>Labs</li>
+              <li>Manager checklist</li>
+              <li>Manager</li>
+              <li>assessment</li>
+              <li>Manager handbook</li>
+            </ul>
+          </div>
+          <div class="box box6">
+            <ul>
+              <li>From the blog</li>
+              <li>How to change your</li>
+              <li>company culture: a four-step framework</li>
+              <li>
+                assessmentHow teams can be more productive by killing 8-hour
+                workday
+              </li>
+              <li>How to build high performing teams inspired by nature</li>
+              <li>
+                <a href="">View all <i class="fas fa-arrow-right"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <button class="messaggio-fuori-campo">
+      <i class="fas fa-comment-alt"></i>
+    </button>
   </body>
 </html>
