--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
             <h3>
               <a href="">Learn more <i class="fas fa-arrow-right"></i></a>
             </h3>
-            <img src="/img/insights.jpg" alt="" />
+            <img src="img/insights.jpg" alt="" />
           </div>
           <div class="contenitore contenitore-dx">
-            <img src="/img/employee-survey.jpg" alt="" />
+            <img src="img/employee-survey.jpg" alt="" />
           </div>
         </div>
         <div class="sottosezione sottosezione3">
           <div class="contenitore contenitore-sx">
-            <img src="/img/performance-review.jpg" alt="" />
+            <img src="img/performance-review.jpg" alt="" />
           </div>
           <div class="contenitore contenitore-dx">
             <h2>Reviews to help teammates get a fair evaluation</h2>
