rimosse le altezze

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <img src="img/illustration-main.jpg" alt="" />
         </div>
       </section>
-      <section class="section2">
+      <section class="section2 clearfix">
         <h2>
           Traditional people processes lead to disengagement and turnover.
         </h2>
